# fitler

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE.txt  MANIFEST.in  README.md  TODO.md  dev.sh  fitler.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.devcontainer/: README.md  devcontainer.json  install.sh  verify.sh
.github/: dependabot.yml
.github/workflows/: black.yml  deploy-site.yml  flake8.yml  lint-site.yml  mypy.yml  pylint.yml  pytest.yml  ruff.yml  test-web-app.yml  verify-devcontainer.yml
app/: README.md  main.py  requirements-test.txt
app/templates/: calendar.html  index.html
app/tests/: test_calendar.py  test_web_app.py
fitler/: __init__.py  __main__.py  activity.py  activity_collection.py  apis.py  core.py  database.py  datafiles.py  db.py  file.py  metadata.py  provider_models.py  provider_sync.py  spreadsheet.py  spreadsheet_activity.py  spreadsheet_activity_collection.py  stravajson.py
fitler/commands/: auth_garmin.py  auth_strava.py  configure.py  last_ten.py  migrate.py  pull.py  reset.py  show_month.py  sync_all.py  sync_month.py
fitler/fileformats/: __init__.py  fit.py  gpx.py  tcx.py
fitler/providers/: __init__.py  base.py  base_activity.py  base_provider.py  base_provider_activity.py  garmin.py  ridewithgps.py  spreadsheet.py  strava.py  stravajson.py
fitler/providers/file/: __init__.py  (+2 more)
old/: apis.py  datafiles.py  doit.py  metadata.py  spreadsheet.py  stravajson.py
scripts/: doit.py  strava_auth.py
site/: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  dev.sh  package-lock.json  package.json  vite.config.js
site/public/: CNAME
site/scripts/: build.js
site/src/: index.template.html
tests/: conftest.py  test_core.py  test_datafiles.py  test_db.py  test_file.py  test_metadata.py
tests/commands/: test_auth_strava.py  test_configure.py  test_migrate.py  test_show_month.py  test_sync_all.py  test_sync_month.py  test_sync_month_duration_hms.py
tests/fileformats/: test_fit.py  test_gpx.py  test_tcx.py
tests/providers/: test_file_provider.py  test_garmin.py  test_ridewithgps.py  test_spreadsheet.py  test_strava.py  test_stravajson.py
(+24 files in other folders)
