[project]
name = "fitler"
version = "0.0.1"
description = "Aggregate, sync, and analyze your fitness activity data."
readme = "README.md"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Chris Kelly", email = "ckdake@ckdake.com" }
]
requires-python = ">=3.7"
dependencies = [
    "peewee==3.18.1",
    "gpxpy==1.6.2",
    "python-tcxparser==2.4.0",
    "fitparse==1.2.0",
    "openpyxl==3.1.2",
    "dateparser==1.2.0",
    "pytz==2025.2",
    "stravaio==0.0.9",
    "requests==2.32.4",
    "ridewithgps==0.0.6"
]

[project.optional-dependencies]
dev = [
    "pylint==3.3.7",
    "black==25.1.0",
    "mypy==1.16.1",
    "flake8==7.2.0",
    "pytest==8.4.0",
    "pytest-cov==6.2.1",
]

[project.urls]
Homepage = "https://github.com/ckdake/fitler"
Issues = "https://github.com/ckdake/fitler/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.mypy]
# ...other mypy config...

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true
